--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,15 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+
+	// jwt
+	// JWT 생성 및 검증을 위한 라이브러리
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // 핵심 JWT 인터페이스 & 빌더 API
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5' // 실제 JWT 구현체
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JWT를 JSON으로 직렬화/역직렬화 하는데 사용
 
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'
 	compileOnly 'org.projectlombok:lombok'
@@ -36,7 +45,6 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	// Log4j2 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-	// https://mvnrepository.com/artifact/com.lmax/disruptor
 	implementation("com.lmax:disruptor:3.4.2")
 	configurations {
 		all {
