--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.url = jdbc:mysql://localhost:3306/demo_item?useSSL=false&useUn
 spring.datasource.username=devuser
 spring.datasource.password=12345
 
-jwt.expiration_time = 86400000
 jwt.secret=VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa
+jwt.expiration_time = 86400000
+jwt.
 
 logging.level.org.springframework.security = TRACE
