--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.5'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	// Log4j2 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 	implementation("com.lmax:disruptor:3.4.2")
@@ -52,6 +55,10 @@ dependencies {
 			exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
 		}
 	}
+
+	// mapStruct
+	implementation 'org.mapstruct:mapstruct:1.6.3'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
 }
 
 tasks.named('test') {
